--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "bootstrap": "^5.1.3",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-hook-form": "^6.0.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-step-progress-bar": "^1.0.3",
+    "reactstrap": "^8.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
