--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.4",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^5.1.3",
     "react": "^16.14.0",
+    "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^16.14.0",
     "react-hook-form": "^6.0.1",
     "react-redux": "^7.2.0",
